# tts-ml

./: .gitignore  README.md  pyproject.toml
docs/: learning-log.md  llm-knowledge-map.md  resources.md  roadmap.md
scripts/: check_env.py
src/audio_llm_lab/: __init__.py
