[project]
name = "audio-llm-lab"
version = "0.1.0"
description = "A learning project for audio large models, starting from Whisper."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate",
  "datasets",
  "evaluate",
  "jiwer",
  "librosa",
  "numpy",
  "sentencepiece",
  "soundfile",
  "torch",
  "torchaudio",
  "transformers",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyter",
  "matplotlib",
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
